--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -11,10 +11,10 @@ const { copyright } = Astro.props;
 
 <footer>
 	<div class="bg-highlight">
-		<div class="contentInner">フッター</div>
+		<div class="contentInner h-300">フッター</div>
 	</div>
 	<div class="bg-prime text-reversal">
-		<p class="text-sm text-center">
+		<p class="text-sm text-center py-20">
 			&copy; {new Date().getFullYear()}
 			{copyright}
 		</p>
