--- a/src/scss/abstracts/_index.scss
+++ b/src/scss/abstracts/_index.scss
@@ -1,6 +1,6 @@
-@forward "variables";
+@forward "config";
 @forward "mixins";
 @forward "functions";
-@forward "custom";
+@forward "variables";
 @forward "extend";
 @forward "svg";
