--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -2,7 +2,7 @@
 @use "sass:math";
 @use "sass:string";
 @use "sass:list";
-@use "variables" as *;
+@use "config" as *;
 
 // メディアクエリ
 // ------------------------------------------------
