--- a/src/scss/abstracts/_svg.scss
+++ b/src/scss/abstracts/_svg.scss
@@ -1,4 +1,4 @@
-@use "variables" as *;
+@use "config" as *;
 
 // 矢印
 %arrow {
@@ -8,4 +8,14 @@
 // 別窓
 %blank {
   mask-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2018%2018%22%3E%20%3Cpath%20id%3D%22open_in_new_FILL0_wght400_GRAD0_opsz20%22%20d%3D%22M145.929-798a1.857%2C1.857%2C0%2C0%2C1-1.362-.567%2C1.857%2C1.857%2C0%2C0%2C1-.567-1.362v-14.143a1.857%2C1.857%2C0%2C0%2C1%2C.567-1.362%2C1.857%2C1.857%2C0%2C0%2C1%2C1.362-.566H153v1.929h-7.071v14.143h14.143V-807H162v7.071a1.857%2C1.857%2C0%2C0%2C1-.567%2C1.362%2C1.857%2C1.857%2C0%2C0%2C1-1.362.567Zm4.58-5.143-1.366-1.366%2C9.563-9.562h-3.134V-816H162v6.429h-1.929v-3.134Z%22%20transform%3D%22translate(-144%20816)%22%20fill%3D%22%230a1284%22%2F%3E%3C%2Fsvg%3E");
+}
+
+// 再生
+%play {
+  mask-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20height%3D%2214%22%20viewBox%3D%220%200%2012%2014%22%3E%20%3Cpath%20id%3D%22%E5%A4%9A%E8%A7%92%E5%BD%A2_3%22%20data-name%3D%22%E5%A4%9A%E8%A7%92%E5%BD%A2%203%22%20d%3D%22M6.136%2C1.481a1%2C1%2C0%2C0%2C1%2C1.728%2C0L13.123%2C10.5a1%2C1%2C0%2C0%2C1-.864%2C1.5H1.741a1%2C1%2C0%2C0%2C1-.864-1.5Z%22%20transform%3D%22translate(12)%20rotate(90)%22%20fill%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E");
+}
+
+// 一時停止
+%pause {
+  mask-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2213.594%22%20height%3D%2213%22%20viewBox%3D%220%200%2013.594%2013%22%3E%20%3Cg%20id%3D%22%E3%82%B0%E3%83%AB%E3%83%BC%E3%83%97_27476%22%20data-name%3D%22%E3%82%B0%E3%83%AB%E3%83%BC%E3%83%97%2027476%22%20transform%3D%22translate(-1164.436%20-429.732)%22%3E%20%3Crect%20id%3D%22%E9%95%B7%E6%96%B9%E5%BD%A2_2101%22%20data-name%3D%22%E9%95%B7%E6%96%B9%E5%BD%A2%202101%22%20width%3D%224%22%20height%3D%2213%22%20rx%3D%222%22%20transform%3D%22translate(1164.436%20429.732)%22%20fill%3D%22%23fff%22%2F%3E%20%3Crect%20id%3D%22%E9%95%B7%E6%96%B9%E5%BD%A2_2102%22%20data-name%3D%22%E9%95%B7%E6%96%B9%E5%BD%A2%202102%22%20width%3D%224%22%20height%3D%2213%22%20rx%3D%222%22%20transform%3D%22translate(1174.029%20429.732)%22%20fill%3D%22%23fff%22%2F%3E%20%3C%2Fg%3E%3C%2Fsvg%3E");
 }
