--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,12 +15,12 @@ import { common } from "../data/common"; // グローバルなサイト設定
  * 現在のページ情報
  */
 interface Props {
-	page: {
-		slug: string;
-		title: string;
-		description: string;
-		url: string;
-	};
+  page: {
+    slug: string;
+    title: string;
+    description: string;
+    url: string;
+  };
 }
 
 const { page } = Astro.props;
@@ -28,27 +28,27 @@ const { page } = Astro.props;
 
 <!doctype html>
 <html dir="ltr" lang="ja">
-	<Head site={common.head} page={page} />
-	<body class={"page-" + page.slug}>
-		<BeginBody />
-		<Header
-			siteName={common.head.siteName}
-			domain={common.head.domain}
-			menu={common.menu}
-			slug={page.slug}
-		/>
-		<main id="main">
-			<slot />
-		</main>
-		<Footer copyright={common.head.copyright} />
-	</body>
+  <Head site={common.head} page={page} />
+  <body class={"page-" + page.slug}>
+    <BeginBody />
+    <Header
+      siteName={common.head.siteName}
+      domain={common.head.domain}
+      menu={common.menu}
+      slug={page.slug}
+    />
+    <main id="main">
+      <slot />
+    </main>
+    <Footer copyright={common.head.copyright} />
+  </body>
 </html>
 
 <script>
-	import "../ts/app.js";
+  import "../ts/app.js";
 </script>
 <script
-	src="//cdn.jsdelivr.net/npm/@oddbird/popover-polyfill@0.3.8/dist/popover.iife.min.js"
-	integrity='sha256-e4nHKzmwysJ3lb8GTURv5YrPqNFQ7xNcYzn/xop4K+0='
-	crossorigin='anonymous'
-	defer></script>
+  src="https://cdn.jsdelivr.net/npm/@oddbird/popover-polyfill@0.3.8/dist/popover.iife.min.js"
+  integrity="sha256-e4nHKzmwysJ3lb8GTURv5YrPqNFQ7xNcYzn/xop4K+0="
+  crossorigin="anonymous"
+  defer></script>
