--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -87,7 +87,7 @@ const {
 		name="viewport"
 		content="width=device-width,initial-scale=1.0,shrink-to-fit=no"
 	/>
-	<meta name="format-detection' content='telephone=no" />
+	<meta name="format-detection" content="telephone=no" />
 	<title>{page.title}</title>
 	<meta name="description" content={page.description} />
 	<meta property="og:type" content={page.slug == "top" ? "website" : "article"} />
